[gd_scene load_steps=8 format=4 uid="uid://dhh2llblcos5k"]

[ext_resource type="PackedScene" uid="uid://nx2prtbxim66" path="res://Prefab/GUI/DialogBox/DialogBoxGeneral/DialogPopup.tscn" id="1"]
[ext_resource type="Script" uid="uid://bbfhwdekibqvu" path="res://Prefab/GUI/DialogBox/DialogBoxGeneral/DialogBoxRegist/DialogBoxRegist.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://b70va62wc3lp2" path="res://Asset/Font/fzcq.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://omuqqfo1aao5" path="res://Asset/Texture/GUI/General/EditBox/EditBox.png" id="5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b8luq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vfvn8"]
texture = ExtResource("5")
texture_margin_left = 15.0
texture_margin_top = 5.0
texture_margin_right = 15.0
texture_margin_bottom = 5.0

[node name="DialogBoxRegist" instance=ExtResource("1")]
script = ExtResource("2")
aliveProcessMode = 3

[node name="Control" parent="Layer" index="1"]
offset_left = 226.0
offset_top = 79.0
offset_right = -226.0
offset_bottom = -79.0

[node name="MarginContainer2" parent="Layer/Control" index="0"]
offset_left = -314.0
offset_top = -221.0
offset_right = 314.0
offset_bottom = 221.0

[node name="TextLabel" parent="Layer/Control/MarginContainer2/MarginContainer/CenterContainer" index="0"]
visible = false

[node name="ButtonContainer" parent="Layer/Control" index="1"]
offset_left = -182.0
offset_top = 120.016
offset_right = 166.0
offset_bottom = 166.016

[node name="RegistButton" parent="Layer/Control/ButtonContainer" index="0" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "注册"

[node name="CancelButton" parent="Layer/Control/ButtonContainer" index="1" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[node name="TextLabel" type="RichTextLabel" parent="Layer/Control" index="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -168.0
offset_right = 95.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.92549, 0.741176, 0.447059, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("4")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=24]注册[/font_size][/center]"
fit_content = true
autowrap_mode = 0

[node name="NameLabel" type="RichTextLabel" parent="Layer/Control" index="3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -126.0
offset_right = -110.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.92549, 0.741176, 0.447059, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("4")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=24]用户名[/font_size][/center]"
fit_content = true
autowrap_mode = 0

[node name="EmailLabel" type="RichTextLabel" parent="Layer/Control" index="4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -70.0
offset_right = -102.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.92549, 0.741176, 0.447059, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("4")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=24]邮箱[/font_size][/center]"
fit_content = true
autowrap_mode = 0

[node name="PasswordLabel" type="RichTextLabel" parent="Layer/Control" index="5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -14.0
offset_right = -102.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.92549, 0.741176, 0.447059, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("4")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=24]密码[/font_size][/center]"
fit_content = true
autowrap_mode = 0

[node name="PasswordLabel2" type="RichTextLabel" parent="Layer/Control" index="6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 42.0
offset_right = -110.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.92549, 0.741176, 0.447059, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("4")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=24]再次输入密码[/font_size][/center]"
fit_content = true
autowrap_mode = 0

[node name="NameLineEdit" type="LineEdit" parent="Layer/Control" index="7"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -126.0
offset_right = 153.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../EmailLineEdit")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b8luq")
theme_override_styles/normal = SubResource("StyleBoxTexture_vfvn8")
context_menu_enabled = false
caret_blink = true

[node name="EmailLineEdit" type="LineEdit" parent="Layer/Control" index="8"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -70.0
offset_right = 153.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../PasswordLineEdit")
focus_previous = NodePath("../NameLineEdit")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b8luq")
theme_override_styles/normal = SubResource("StyleBoxTexture_vfvn8")
context_menu_enabled = false
caret_blink = true

[node name="PasswordLineEdit" type="LineEdit" parent="Layer/Control" index="9"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -14.0
offset_right = 153.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../PasswordLineEdit2")
focus_previous = NodePath("../EmailLineEdit")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b8luq")
theme_override_styles/normal = SubResource("StyleBoxTexture_vfvn8")
context_menu_enabled = false
caret_blink = true
secret = true

[node name="PasswordLineEdit2" type="LineEdit" parent="Layer/Control" index="10"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = 42.0
offset_right = 153.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
focus_previous = NodePath("../PasswordLineEdit")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b8luq")
theme_override_styles/normal = SubResource("StyleBoxTexture_vfvn8")
context_menu_enabled = false
caret_blink = true
secret = true

[connection signal="pressed" from="Layer/Control/ButtonContainer/RegistButton" to="." method="RegistButtonPressed"]
[connection signal="pressed" from="Layer/Control/ButtonContainer/CancelButton" to="." method="CancelButtonPressed"]
